// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 1`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        style="color: rgb(255, 62, 0);"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 2`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        style="color: rgb(255, 170, 0);"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 3`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        style="color: rgb(0, 82, 217);"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 4`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        style="color: rgb(0, 82, 217);"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 5`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-check-circle"
        style="color: rgb(255, 62, 0);"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM512 160C317.59576832 160 160 317.59576832 160 512 160 706.4042304 317.59576832 864 512 864 706.4042304 864 864 706.4042304 864 512 864 317.59576832 706.4042304 160 512 160ZM690.8655168 353.58818368L736.120352 398.8430176 509.84617984 625.1171872 464.59134592 670.3720192 419.336512 625.1171872 283.57201024 489.35268544 328.82684416 444.09785152 464.576 579.84 690.8655168 353.58818368Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 6`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <span
        style="color: rgb(255, 62, 0);"
      >
        CustomIcon
      </span>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 7`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-check-circle"
        style="color: rgb(0, 82, 217);"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM512 160C317.59576832 160 160 317.59576832 160 512 160 706.4042304 317.59576832 864 512 864 706.4042304 864 864 706.4042304 864 512 864 317.59576832 706.4042304 160 512 160ZM690.8655168 353.58818368L736.120352 398.8430176 509.84617984 625.1171872 464.59134592 670.3720192 419.336512 625.1171872 283.57201024 489.35268544 328.82684416 444.09785152 464.576 579.84 690.8655168 353.58818368Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 8`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <svg
        class="t-icon t-icon-check-circle"
        style="color: rgb(0, 82, 217);"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM512 160C317.59576832 160 160 317.59576832 160 512 160 706.4042304 317.59576832 864 512 864 706.4042304 864 864 706.4042304 864 512 864 317.59576832 706.4042304 160 512 160ZM690.8655168 353.58818368L736.120352 398.8430176 509.84617984 625.1171872 464.59134592 670.3720192 419.336512 625.1171872 283.57201024 489.35268544 328.82684416 444.09785152 464.576 579.84 690.8655168 353.58818368Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopConfirm 组件测试 PopContent - icon & theme snapshots 9`] = `
<DocumentFragment>
  <div
    class="t-popconfirm__content"
  >
    <div
      class="t-popconfirm__body"
    >
      <span>
        CustomIcon
      </span>
      <div
        class="t-popconfirm__inner"
      >
        弹出层描述
      </div>
    </div>
    <div
      class="t-popconfirm__buttons"
    >
      <span
        class="t-popconfirm__cancel"
      />
      <span
        class="t-popconfirm__confirm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      删除订单
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      点我看按钮
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      提交审核
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base t-is-disabled"
    disabled=""
  >
    <span
      class="t-button__text"
    >
      禁用按钮
    </span>
  </button>
</DocumentFragment>
`;

exports[`button.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      按钮样式（属性-字符串）
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      按钮样式（TNode）
    </span>
  </button>
</DocumentFragment>
`;

exports[`describe.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      自定义content
    </span>
  </button>
  <button
    class="t-button t-button--theme-danger t-button--variant-outline"
  >
    <span
      class="t-button__text"
    >
      自定义content
    </span>
  </button>
</DocumentFragment>
`;

exports[`extends.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      浮层在右边
    </span>
  </button>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        默认
      </span>
    </button>
    <button
      class="t-button t-button--theme-warning t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        警告
      </span>
    </button>
    <button
      class="t-button t-button--theme-danger t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        危险
      </span>
    </button>
  </div>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      <span
        class="t-button__text"
      >
        图标（属性）
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`inherit.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      浮层出现在下方
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      浮层出现在右侧
    </span>
  </button>
</DocumentFragment>
`;

exports[`placement.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      Left
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      Top
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      Bottom
    </span>
  </button>
</DocumentFragment>
`;

exports[`theme.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-outline"
  >
    <span
      class="t-button__text"
    >
      默认
    </span>
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      提示
    </span>
  </button>
  <button
    class="t-button t-button--theme-danger t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      警告
    </span>
  </button>
  <button
    class="t-button t-button--theme-danger t-button--variant-base"
  >
    <span
      class="t-button__text"
    >
      错误
    </span>
  </button>
</DocumentFragment>
`;
